feat: security, SEO, locale and performance improvements - Protect env: add .env to .gitignore, add .env.example, untrack .env - Locale/currency: switch to UZS, ru_UZ; update SEO meta, structured data, analytics - Performance: route-based lazy loading; lazy images - CSP: allow GA/Fonts/Supabase/rocket - SEO: add sitemap.xml; update robots.txt - Fix build errors and typos in parts catalog

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
   <meta name="googlebot" content="index,follow" />
   <meta name="geo.region" content="UZ" />
   <meta name="geo.placename" content="Узбекистан" />
-  <meta httpEquiv="Content-Language" content="ru" />
+  <meta http-equiv="Content-Language" content="ru" />
   
   <!-- Open Graph Meta Tags -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="MYDON - Промышленное оборудование и складская техника" />
   <meta property="og:description" content="Каталог промышленного оборудования MYDON. Электропогрузчики, складская техника, запчасти и сервисное обслуживание." />
-  <meta property="og:image" content="/assets/images/og-image.jpg" />
+  <meta property="og:image" content="/assets/images/no_image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="MYDON" />
-  <meta property="og:locale" content="ru_RU" />
+  <meta property="og:locale" content="ru_UZ" />
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@MYDON_official" />
   <meta name="twitter:title" content="MYDON - Промышленное оборудование и складская техника" />
   <meta name="twitter:description" content="Каталог промышленного оборудования MYDON. Электропогрузчики, складская техника, запчасти и сервисное обслуживание." />
-  <meta name="twitter:image" content="/assets/images/og-image.jpg" />
+  <meta name="twitter:image" content="/assets/images/no_image.png" />
   
   <!-- Favicons and Icons -->
   <link rel="icon" href="/favicon.ico" />
